<resources>
    <!-- Aula 19, Seção 4: Este arquivo é para inserir textos, que serão usados pelo app. -->
    <string name="app_name">AppListaCliente</string>
    <string name="txt_titulo">Aplicativo Lista VIP Curso Android</string>
    <string name="txt_hint_edit_primeiro_nome">Primeiro Nome</string>
    <string name="txt_nome">Nome</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome</string>
    <string name="txt_sobrenome">Sobrenome</string>
    <string name="txt_hint_edit_nome_curso_desejado">Nome do Curso Desejado</string>
    <string name="txt_nome_curso_desejado">Nome do Curso Desejado</string>
    <string name="txt_hint_edit_telefone_contato">Telefone de Contato</string>
    <string name="txt_telefone_contato">Telefone de Contato</string>
    <string name="txt_button_limpar">Limpar</string>
    <string name="txt_button_salvar">Salvar</string>
    <string name="txt_button_finalizar">Finalizar</string>
</resources>